# eve-static-data

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  db_rewrite_todo.md  justfile  planned-refactors.md  pyproject.toml
.github/agents/: Reviewer.agent.md
.github/prompts/: plan-esdTui.prompt.md  plan-eveStaticDataSqliteSchema.prompt.md  plan-yamlSchemaReport.prompt.md
dev-docs/: db_rewrite_todo.md  eve-static-data-roadmap.md  validate-sde-todo.md
scripts/: cli_test_harness.py  exports.py  gen_table_defs.py  jsonl_type_inspector.md  jsonl_type_inspector.py  tools_test.py  validation_test.py
scripts/dev/: generate_test_data.py  generate_yaml_test_data.py  yaml_json_roundtrip.py
src/eve_static_data/: __init__.py  collect_static_data.py  derive_datasets.py  esd.py  esd_loader.py  esd_store.py  esd_tools.py  network.py  protocols.py  raw_jsonl_access.py  schema-update-instructions.md  sde_access_protocol.py  sde_loader.py  sde_tools.py  sde_type_sigs.py  settings.py  transformers.py  transformers_2.py  validation.py  yaml-schema-describer.md  yaml_validation.py
src/eve_static_data/access/: __init__.py  derived_datasets.py  derived_lazy_loader.py  localized_datasets.py  localized_datasets_factory.py  localized_datasets_loader.py  localized_pydantic_factory.py  raw_json.py  raw_json_protocol.py  raw_json_td.py  raw_json_td_protocol.py  sde_datasets.py  sde_file_names.py  sde_pydantic_factory.py  sde_reader.py  sde_records.py  sde_records_pydantic.py  sde_records_td.py  sde_td_factory.py  validation.py  yaml_datasets.py
src/eve_static_data/api/: __init__.py  derived.py  get_sde_reader.py
src/eve_static_data/build_3123381/: __init__.py
src/eve_static_data/cli/: __init__.py  config_info.py  helpers.py  main_typer.py  sde.py  sde_db.py  sde_dev.py  sde_export.py  sde_helpers.py  sde_import.py  sde_io.py  sde_network.py  sde_raw.py  sde_unpack.py  sde_validate.py
src/eve_static_data/db/: insert_generation.py  insert_records.py  request_records.py  table_def.sql  table_defs.py  table_inserts.py
src/eve_static_data/export/: localized_datasets.py
src/eve_static_data/exports/: eve_types_table.py  market_paths.py
src/eve_static_data/helpers/: __init__.py  app_data.py  datetime_filename.py  db.py  db_import.py  dict_diagnostics.py  download_file.py  expand_multidict.py  http_client.py  jsonl_reader.py  narrow_localized.py  save_text_file.py  schema_report.py  sde_dict_sigs.py  sde_info.py  sde_typed_dicts_to_file.py  sde_unpack.py  simple_download_async.py  write_dicts_to_csv.py  yaml_schema_report.py
src/eve_static_data/models/: __init__.py  common.py  dataset_filenames.py  db.py  exported_dataset_files.py  exported_datasets.py  exported_localized_datasets.py  raw_td.py  (+23 more)
templates/: entry_title_template.md.j2  new_fragment.md.j2
tests/: conftest.py  inherited_model_test.py  pydantic_td_validation_test.py  test_dataclass_typeadaptor.py
(+256 files in other folders)
