[project]
name = "eve-static-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Chad Lowe", email = "pfmsoft.dev@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
eve-static-data = "eve_static_data:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"
