[project]
name = "eve-static-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Chad Lowe", email = "pfmsoft.dev@gmail.com" }]
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "aiohttp>=3.13.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.11.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.46",
    "typer>=0.20.0",
    "whenever>=0.9.5",
]

[project.scripts]
eve-static-data = "eve_static_data.cli.main_typer:app"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[project.urls]
Documentation = "https://github.com/DonalChilde/eve-static-data#readme"
# Documentation_rtd = "https://eve-static-data.readthedocs.io"
Issues = "https://github.com/DonalChilde/eve-static-data/issues"
Source = "https://github.com/DonalChilde/eve-static-data"

[dependency-groups]
# Dev dependencies
# https://docs.astral.sh/uv/concepts/projects/dependencies/#development-dependencies
# https://docs.astral.sh/uv/concepts/projects/dependencies/#dependency-groups
dev = [
    { include-group = "lint" },
    { include-group = "test" },
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.1",
    "scriv>=1.7.0",
]
lint = ["ruff>=0.13.1"]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "rich>=13.0.0",
]
# Documentation building dependencies like Sphinx
doc = []

[tool.pytest.ini_options]
pythonpath = "src"
log_file = "logs/tests.log"
log_file_date_format = "%Y-%m-%dT%H:%M:%S.%f%z"
log_file_format = "%(asctime)s %(levelname)s:%(funcName)s: %(message)s [in %(pathname)s:%(lineno)d]"
log_file_level = "INFO"
norecursedirs = "tests/old"

[tool.coverage.run]
branch = true
parallel = true
# omit = [""]

[tool.ruff.lint]
select = ["B", "UP", "D", "DOC", "FIX", "I", "F401"]
# non-imperative-mood (D401)
ignore = ["D401", "D101"]
# extend-select = ["I"]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.scriv]
#version = "literal: pyproject.toml: project.version"
version = "literal: src/eve_static_data/__init__.py: __version__"
format = "md"
md_header_level = "2"
entry_title_template = "file: changelog.d/templates/entry_title_template.md.j2"
new_fragment_template = "file: changelog.d/templates/new_fragment.${config:format}.j2"
